feat: back 1.0.0, hay que hacer ci/cd del openapi
